--- a/styles/layout.padrao.module.css
+++ b/styles/layout.padrao.module.css
@@ -1,4 +1,3 @@
-
 .pageContainer {
   display: flex;
   min-height: 100vh;
@@ -12,6 +11,7 @@
   height: 100vh;
   background-color: var(--cor-secundaria);
 }
+
 .spinner {
   width: 50px;
   height: 50px;
@@ -20,9 +20,10 @@
   border-radius: 50%;
   animation: rotate 1s linear infinite;
 }
+
 @keyframes rotate {
   from { transform: rotate(0deg); }
-  to   { transform: rotate(360deg); }
+  to { transform: rotate(360deg); }
 }
 
 .sidebar {
@@ -46,23 +47,27 @@
   font-weight: 600;
   margin-bottom: 40px;
 }
+
 .navLoginCadastro {
   display: flex;
   flex-direction: column;
   margin: 5px;
   margin-bottom: 50px;
 }
+
 .navLinkLoginCadastro {
   text-decoration: none;
   color: var(--cor-texto);
   font-size: 13px;
 }
+
 .navItemLoginCadastro {
   display: flex;
   align-items: center;
   border-radius: 10px;
   color: var(--cor-texto);
 }
+
 .navItemLoginCadastro span { display: block; }
 
 .navList {
@@ -70,6 +75,7 @@
   padding: 0;
   margin: 0;
 }
+
 .navItem {
   display: flex;
   align-items: center;
@@ -81,6 +87,7 @@
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
 }
+
 .navLink { text-decoration: none; color: var(--cor-texto); }
 
 .navItem:hover,
@@ -99,6 +106,7 @@
   cursor: pointer;
   transition: background 0.2s ease;
 }
+
 .logoutButton:hover { background-color: var(--cor-primaria); }
 
 .cartNavItem { position: relative; }
@@ -174,6 +182,7 @@
   margin-bottom: 15px;
   position: relative;
 }
+
 .logo { display: flex; align-items: center; justify-content: center; }
 .logoImage { width: 120px; height: auto; object-fit: contain; }
 
@@ -208,6 +217,7 @@
     padding-left: 0;
     padding-right: 0;
     width: 100%;
+    overflow-x: hidden;
   }
 
   .mainContent {
@@ -277,4 +287,22 @@
   }
 
   .footer { padding: 12px 16px; }
+}
+
+@media (max-width: 600px) {
+  .footerContent {
+    flex-direction: column;
+    gap: 20px;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  
+  .footerColumn {
+    min-width: 100%;
+    padding: 0;
+  }
+  
+  .mainContent {
+    padding: 25px 10px;
+  }
 }
